--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -4,15 +4,12 @@
   <div class="content">
     <div class="sm:flex sm:items-center">
       <div class="sm:flex-auto">
-        <h1 class="text-2xl font-semibold text-gray-900">Proveedores</h1>
-        <p class="mt-2 text-sm text-gray-700">
-          Lista de todos los proveedores de tu empresa
-        </p>
+        <h1 class="text-2xl font-semibold text-gray-900">Suppliers</h1>
       </div>
-      <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
+      <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none mb-3">
         <%= link_to new_supplier_path,
-                    class: "btn btn-primary" do %>
-          <i class="fas fa-plus mr-2"></i>Nuevo Proveedor
+                    class: "btn btn-primary mb-3 rounded" do %>
+          <i class="fas fa-plus mr-2"></i>New Supplier
         <% end %>
       </div>
     </div>
