--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,11 +1,15 @@
 <%= render "shared/sidebar" %>
 <%= turbo_frame_tag :customer do %>
   <div class="content">
-    <div class="d-flex justify-content-between align-items-center mb-4">
-      <h1>Clientes</h1>
-      <%= link_to "Nuevo Cliente", new_customer_path, class: "btn btn-primary" %>
+    <div class="sm:flex-auto">
+        <h1 class="text-2xl font-semibold text-gray-900">Customers</h1>
     </div>
-
+    <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none mb-3">
+        <%= link_to new_customer_path,
+                    class: "btn btn-primary mb-3 rounded" do %>
+          <i class="fas fa-plus mr-2"></i>New Client
+        <% end %>
+      </div>
     <table class="table">
       <thead>
         <tr>
