--- a/app/views/sales/_form.html.erb
+++ b/app/views/sales/_form.html.erb
@@ -161,7 +161,7 @@
     <!-- Botones -->
     <div class="mt-6">
       <%= f.button :submit, "Create Sale", class: "btn btn-primary me-2" %>
-      <%= link_to "Cancelar", sales_path, class: "btn btn-secondary" %>
+      <%= link_to "Continue", sales_path, class: "btn btn-secondary" %>
     </div>
   <% end %>
 </div>
