--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -5,8 +5,12 @@
       <h1 class="text-2xl font-semibold text-gray-900">Suppliers</h1>
     </div>
     <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none mb-3">
-      <%= link_to new_supplier_path, class: "btn btn-primary mb-3 rounded" do %>
+      <%= link_to new_supplier_path, class: "btn btn-sm btn-primary mb-3 mr-3 rounded" do %>
         <i class="fas fa-plus mr-2"></i> New Supplier
+      <% end %>
+      <%= link_to suppliers_path(format: :xlsx),
+                    class: "btn btn-sm btn-success mb-3 rounded" do %>
+          <i class="fa-solid fa-download"></i> Download as Excel
       <% end %>
     </div>
     <table class="table">
@@ -29,8 +33,8 @@
             <td><%= supplier.phone %></td>
             <td><%= supplier.tax_id %></td>
             <td class="d-flex gap-2">
-              <%= link_to "View", supplier_path(supplier), class: "btn btn-sm btn-info" %>
-              <%= link_to "Edit", edit_supplier_path(supplier), class: "btn btn-sm btn-warning" %>
+              <%= link_to "View", supplier_path(supplier), class: "btn btn-sm btn-info rounded" %>
+              <%= link_to "Edit", edit_supplier_path(supplier), class: "btn btn-sm btn-warning rounded" %>
             </td>
           </tr>
         <% end %>
