--- a/app/views/purchases/_form.html.erb
+++ b/app/views/purchases/_form.html.erb
@@ -168,7 +168,7 @@
       <% if @purchase.new_record? %>
         <%= f.button :submit, "Create Purchase", class: "btn btn-primary me-2" %>
       <% else %>
-        <%= f.button :submit, "Edit", class: "btn btn-primary me-2" %>
+        <%= f.button :submit, "Update", class: "btn btn-primary me-2" %>
       <% end %>
       <%= link_to "Continue", purchases_path, class: "btn btn-secondary" %>
     </div>
