--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -4,7 +4,7 @@
       <div class="bg-white shadow sm:rounded-lg">
         <div class="px-4 py-5 sm:p-6">
           <h1 class="text-2xl font-bold mb-6">Nuevo Empleado</h1>
-          <%= render 'shared/employees/form' %>
+          <%= render 'form' %>
         </div>
       </div>
     </div>
