--- a/app/views/employees/profile.html.erb
+++ b/app/views/employees/profile.html.erb
@@ -1,9 +1,10 @@
+<%= render "shared/sidebar" %>
 <%= turbo_frame_tag :employee do %>
   <div class="content">
     <div class="max-w-3xl mx-auto">
       <div class="bg-white shadow overflow-hidden sm:rounded-lg">
         <div class="px-4 py-5 sm:px-6">
-          <h3 class="text-lg leading-6 font-medium text-gray-900">Mi Perfil</h3>
+          <h3 class="text-lg leading-6 font-medium text-gray-900">My profile</h3>
           <p class="mt-1 max-w-2xl text-sm text-gray-500">Información personal y detalles de la cuenta</p>
         </div>
 
