--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -35,12 +35,16 @@
         <%= link_to employees_path, class: "nav-link" do %>
           <i class="fas fa-users"></i> Employees
         <% end %>
+
       <% elsif employee_signed_in? && current_employee.role == 'Manager' %>
           <%= link_to employees_path, class: "nav-link" do %>
            <i class="fas fa-users"></i> Employees
           <% end %>
+          <%= link_to profile_employees_path, class: "nav-link" do %>
+            <i class="fa-solid fa-user"></i> My profile
+          <% end %>
       <% else %>
-        <%= link_to employees_path, class: "nav-link" do %>
+        <%= link_to profile_employees_path, class: "nav-link" do %>
           <i class="fa-solid fa-user"></i> My profile
         <% end %>
       <% end %>
