--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -16,8 +16,8 @@
         </div>
       </div>
       <div class="card-footer">
-        <%= link_to "Editar", edit_customer_path(@customer), class: "btn btn-warning" %>
-        <%= link_to "Volver", customers_path, class: "btn btn-secondary" %>
+        <%= link_to "Editar", edit_customer_path(@customer), class: "btn btn-sm btn-warning rounded" %>
+        <%= link_to "Volver", customers_path, class: "btn btn-sm btn-secondary rounded" %>
       </div>
     </div>
   </div>
