--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -61,11 +61,11 @@
 
       <div class="mt-4 space-x-2">
         <%= f.submit 'Guardar',
-                    class: 'btn btn-success',
+                    class: 'btn btn-sm btn-success rounded',
                     data: { disable_with: 'Guardando...' } %>
         <%= link_to 'Cancelar',
                     products_path,
-                    class: 'btn btn-secondary' %>
+                    class: 'btn btn-sm btn-secondary rounded' %>
       </div>
     <% end %>
   </div>
