--- a/app/views/purchases/show.html.erb
+++ b/app/views/purchases/show.html.erb
@@ -37,8 +37,8 @@
         </table>
       </div>
       <div class="card-footer">
-        <%= link_to "Editar", edit_purchase_path(@purchase), class: "btn btn-warning" %>
-        <%= link_to "Volver", purchases_path, class: "btn btn-secondary" %>
+        <%= link_to "Editar", edit_purchase_path(@purchase), class: "btn btn-warning btn-sm rounded" %>
+        <%= link_to "Continuar", purchases_path, class: "btn btn-secondary btn-sm rounded" %>
       </div>
     </div>
   </div>
