--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -36,8 +36,8 @@
         </table>
       </div>
       <div class="card-footer">
-        <%= link_to "Editar", edit_sale_path(@sale), class: "btn btn-warning" %>
-        <%= link_to "Volver", sales_path, class: "btn btn-secondary" %>
+        <%= link_to "Editar", edit_sale_path(@sale), class: "btn btn-sm btn-warning rounded" %>
+        <%= link_to "Continuar", sales_path, class: "btn btn-sm btn-secondary rounded" %>
       </div>
     </div>
   </div>
