--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -11,7 +11,7 @@
   </div>
 
   <div class="form-actions mt-3">
-    <%= f.button :submit, class: 'btn btn-primary' %>
-    <%= link_to 'Cancelar', customers_path, class: 'btn btn-secondary' %>
+    <%= f.button :submit, class: 'btn btn-sm btn-primary rounded' %>
+    <%= link_to 'Cancelar', customers_path, class: 'btn btn-sm btn-secondary rounded' %>
   </div>
-<% end %> 
+<% end %>
