--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -35,8 +35,12 @@
             <td><%= customer.address %></td>
             <td><%= customer.tax_id %></td>
             <td class="d-flex gap-2">
-              <%= link_to "View", customer_path(customer), class: "btn btn-sm btn-info rounded" %>
-              <%= link_to "Edit", edit_customer_path(customer), class: "btn btn-sm btn-warning rounded" %>
+              <%= link_to customer_path(customer), class: "btn btn-sm btn-info rounded" do %>
+                <i class="fas fa-eye"></i>
+              <% end %>
+              <%= link_to edit_customer_path(customer), class: "btn btn-sm btn-warning rounded" do %>
+                <i class="fas fa-edit"></i>
+              <% end %>
             </td>
           </tr>
         <% end %>
