--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -34,8 +34,14 @@
             <td> <%= product.brand %> </td>
             <td><%= product.stock %></td>
             <td>
-              <%= link_to 'View', product_path(product), class: 'btn btn-info rounded' %>
-              <%= link_to 'Edit', edit_product_path(product), class: 'btn btn-warning rounded' if policy(product).edit? %>
+              <%= link_to product_path(product), class: 'btn btn-info rounded' do %>
+                <i class="fas fa-eye"></i>
+              <% end %>
+              <% if policy(product).edit? %>
+                <%= link_to edit_product_path(product), class: 'btn btn-warning rounded' do %>
+                  <i class="fas fa-edit"></i>
+                <% end %>
+              <% end %>
             </td>
           </tr>
         <% end %>
