--- a/app/views/purchases/_form.html.erb
+++ b/app/views/purchases/_form.html.erb
@@ -105,7 +105,7 @@
 
     <div class="mb-4">
       <button type="button"
-              class="btn btn-success"
+              class="btn btn-sm btn-success rounded"
               style="width: 200px;"
               data-action="click->purchases-form#addProduct">
         Agregar Producto
@@ -137,10 +137,9 @@
               <td class="text-center py-3 px-6">
                 <div class="d-flex justify-content-center">
                   <button type="button"
-                          class="btn btn-danger btn-sm d-flex align-items-center gap-2"
+                          class="btn btn-sm btn-danger rounded btn-sm d-flex align-items-center gap-2"
                           data-action="click->purchases-form#removeProduct">
-                    <i class="bi bi-trash"></i>
-                    Eliminar
+                    <i class="fas fa-trash"></i>
                   </button>
                 </div>
                 <%= hidden_field_tag "purchase[purchase_details_attributes][#{detail.id}][id]", detail.id %>
@@ -166,11 +165,11 @@
     <!-- Botones -->
     <div class="mt-6">
       <% if @purchase.new_record? %>
-        <%= f.button :submit, "Create Purchase", class: "btn btn-primary me-2" %>
+        <%= f.button :submit, "Create Purchase", class: "btn btn-sm btn-primary me-2 rounded" %>
       <% else %>
-        <%= f.button :submit, "Update", class: "btn btn-primary me-2" %>
+        <%= f.button :submit, "Update", class: "btn btn-sm btn-primary me-2 rounded" %>
       <% end %>
-      <%= link_to "Continue", purchases_path, class: "btn btn-secondary" %>
+      <%= link_to "Continue", purchases_path, class: "btn btn-sm btn-secondary rounded" %>
     </div>
   <% end %>
 </div>
