--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -33,15 +33,20 @@
             <td><%= number_to_currency(purchase.total_price) %></td>
             <td><%= purchase.supplier.company_name %></td>
             <td class="d-flex gap-2">
-              <%= link_to "View", purchase_path(purchase), class: "btn btn-sm btn-info rounded" %>
-              <%= link_to "Edit", edit_purchase_path(purchase), class: "btn btn-sm btn-warning rounded" %>
-              <%= link_to "Delete",
-                  purchase_path(purchase),
+              <%= link_to purchase_path(purchase), class: "btn btn-sm btn-info rounded" do %>
+                <i class="fas fa-eye"></i>
+              <% end %>
+              <%= link_to edit_purchase_path(purchase), class: "btn btn-sm btn-warning rounded" do %>
+                <i class="fas fa-edit"></i>
+              <% end %>
+              <%= link_to purchase_path(purchase),
                   data: {
                     turbo_method: :delete,
                     turbo_confirm: "¿Estás seguro que deseas eliminar esta compra?"
                   },
-                  class: "btn btn-sm btn-danger" %>
+                  class: "btn btn-sm btn-danger rounded" do %>
+                <i class="fas fa-trash"></i>
+              <% end %>
             </td>
           </tr>
         <% end %>
