--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -31,8 +31,12 @@
           <td><%= "#{sale.customer.first_name} #{sale.customer.last_name}" %></td>
           <td><%= number_to_currency(sale.total_price) %></td>
           <td class="d-flex gap-2">
-            <%= link_to "View", sale_path(sale), class: "btn btn-sm btn-info rounded" %>
-            <%= link_to "Edit", edit_sale_path(sale), class: "btn btn-sm btn-warning rounded" %>
+            <%= link_to sale_path(sale), class: "btn btn-sm btn-info rounded" do %>
+              <i class="fas fa-eye"></i>
+            <% end %>
+            <%= link_to edit_sale_path(sale), class: "btn btn-sm btn-warning rounded" do %>
+              <i class="fas fa-edit"></i>
+            <% end %>
           </td>
         </tr>
       <% end %>
