--- a/app/views/suppliers/edit.html.erb
+++ b/app/views/suppliers/edit.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag :supply do %>
+<%= turbo_frame_tag :supplier do %>
   <div class="content">
     <div class="max-w-2xl mx-auto">
       <div class="bg-white shadow sm:rounded-lg">
@@ -39,9 +39,9 @@
                 <%= f.text_field :tax_id, class: "input-field" %>
               </div>
 
-              <div class="flex justify-end gap-3">
-                <%= link_to "Cancelar", suppliers_path, class: "btn btn-secondary" %>
-                <%= f.submit "Actualizar Proveedor", class: "btn btn-primary" %>
+              <div class="flex justify-end gap-3 mt-3">
+                <%= link_to "Cancelar", suppliers_path, class: "btn btn-sm btn-secondary rounded" %>
+                <%= f.submit "Actualizar Proveedor", class: "btn btn-sm btn-primary rounded" %>
               </div>
             </div>
           <% end %>
