--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -33,8 +33,12 @@
             <td><%= supplier.phone %></td>
             <td><%= supplier.tax_id %></td>
             <td class="d-flex gap-2">
-              <%= link_to "View", supplier_path(supplier), class: "btn btn-sm btn-info rounded" %>
-              <%= link_to "Edit", edit_supplier_path(supplier), class: "btn btn-sm btn-warning rounded" %>
+              <%= link_to supplier_path(supplier), class: "btn btn-sm btn-info rounded" do %>
+                <i class="fas fa-eye"></i>
+              <% end %>
+              <%= link_to edit_supplier_path(supplier), class: "btn btn-sm btn-warning rounded" do %>
+                <i class="fas fa-edit"></i>
+              <% end %>
             </td>
           </tr>
         <% end %>
