--- a/app/views/suppliers/new.html.erb
+++ b/app/views/suppliers/new.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag :supply do %>
+<%= turbo_frame_tag :supplier do %>
   <div class="content">
     <div class="max-w-2xl mx-auto">
       <div class="bg-white shadow sm:rounded-lg">
