--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -1,4 +1,4 @@
- <%= turbo_frame_tag :supply do %>
+ <%= turbo_frame_tag :supplier do %>
   <div class="content">
     <div class="max-w-3xl mx-auto">
       <div class="bg-white shadow overflow-hidden sm:rounded-lg">
@@ -38,11 +38,11 @@
       </div>
 
       <div class="mt-6 flex justify-end space-x-3">
-        <%= link_to suppliers_path, class: "btn btn-secondary" do %>
-          <i class="fas fa-arrow-left mr-2"></i>Volver
+        <%= link_to suppliers_path, class: "btn btn-sm btn-secondary rounded" do %>
+          <i class="fas fa-arrow-left mr-2"></i> Volver
         <% end %>
-        <%= link_to edit_supplier_path(@supplier), class: "btn btn-primary" do %>
-          <i class="fas fa-edit mr-2"></i>Editar
+        <%= link_to edit_supplier_path(@supplier), class: "btn btn-sm btn-primary rounded" do %>
+          <i class="fas fa-edit mr-2"></i> Editar
         <% end %>
       </div>
     </div>
