--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -3,25 +3,25 @@
     <%= f.input :first_name,
                 required: true,
                 label: 'Nombre',
-                disabled: false,
+                disabled: !current_user,
                 input_html: { class: 'form-input' } %>
 
     <%= f.input :last_name,
                 required: true,
                 label: 'Apellido',
-                disabled: false,
+                disabled: !current_user,
                 input_html: { class: 'form-input' } %>
 
     <%= f.input :email,
                 required: true,
-                disabled: true,
+                disabled: !current_user,
                 input_html: { class: 'form-input' } %>
 
     <%= f.input :role,
                 collection: ['Manager', 'Employee'],
                 label: 'Rol',
                 include_blank: false,
-                disabled: true,
+                disabled: !current_user,
                 input_html: { class: 'form-select' } %>
 
     <%= f.input :status,
@@ -29,7 +29,7 @@
                 label: 'Estado',
                 label_method: ->(status) { status == 'active' ? 'Activo' : 'Inactivo' },
                 include_blank: false,
-                disabled: true,
+                disabled: !current_user,
                 input_html: { class: 'form-select' } %>
 
     <% if @employee.new_record? %>
