--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,6 +3,9 @@
   <div class="content">
     <div class="sm:flex-auto">
         <h1 class="text-2xl font-semibold text-gray-900">Products</h1>
+        <p class="mt-2 text-sm text-gray-700">
+          Total de productos: <%= @products.count %>
+        </p>
     </div>
     <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none mb-3">
         <%= link_to new_product_path,
