--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -3,7 +3,10 @@
   <div class="content">
 
     <div class="sm:flex-auto">
-        <h1 class="text-2xl font-semibold text-gray-900">Purchases for Stock</h1>
+        <h1 class="text-2xl font-semibold text-gray-900">Órdenes de Compra</h1>
+        <p class="mt-2 text-sm text-gray-700">
+          Total de órdenes: <%= @purchases.count %>
+        </p>
     </div>
     <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none mb-3">
         <%= link_to new_purchase_path,
