--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,9 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <%= render "shared/flashes" %>
+    <div id="popup" class="popup">
+      <%= render "shared/flashes" %>
+    </div>
     <%= yield %>
   </body>
 </html>
