--- a/app/views/purchases/_form.html.erb
+++ b/app/views/purchases/_form.html.erb
@@ -115,7 +115,7 @@
     <!-- Título de Resumen -->
     <h2 class="text-xl font-bold mb-4">Resumen de Compra</h2>
 
-    <!-- Tabla con más espaciado -->
+    <!-- Tabla con el formato correcto -->
     <table class="w-full table table-hover">
       <thead>
         <tr class="border-b">
