trash icon and sidebar color

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="sidebar">
+<div class="sidebar bg-dark">
   <ul class="nav flex-column">
     <li class="nav-item">
       <%= link_to dashboard_path, class: "nav-link" do %>
