--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,8 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <div id="popup" class="popup">
-      <%= render "shared/flashes" %>
+    <div id="flash" class="flash">
+      <%= render "shared/flash" %>
     </div>
     <%= yield %>
   </body>
