--- a/app/views/purchases/create.turbo_stream.erb
+++ b/app/views/purchases/create.turbo_stream.erb
@@ -1,2 +1,2 @@
-<%= turbo_stream.prepend "popup", partial: "shared/flashes" %>
+<%= turbo_stream.prepend "flash", partial: "shared/flash" %>
 <%= turbo_stream.replace("purchase", partial: "purchases/show") %>
