turbo stream vfinal

--- a/app/views/suppliers/new.html.erb
+++ b/app/views/suppliers/new.html.erb
@@ -6,7 +6,7 @@
           <h1 class="text-lg font-medium leading-6 text-gray-900">Nuevo Proveedor</h1>
 
           <%= form_with(model: @supplier, class: "mt-5") do |f| %>
-            <%= render "shared/error_messages", resource: @supplier if @supplier.errors.any? %>
+            <%# <%= render "shared/error_messages", resource: @supplier if @supplier.errors.any? %>
 
             <div class="space-y-4">
               <div>
