--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -1,50 +1,3 @@
  <%= turbo_frame_tag :supplier do %>
-  <div class="content">
-    <div class="max-w-3xl mx-auto">
-      <div class="bg-white shadow overflow-hidden sm:rounded-lg">
-        <div class="px-4 py-5 sm:px-6">
-          <h3 class="text-lg leading-6 font-medium text-gray-900">
-            Información del Proveedor
-          </h3>
-        </div>
-        <div class="border-t border-gray-200">
-          <dl>
-            <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-              <dt class="text-sm font-medium text-gray-500">Nombre de la empresa</dt>
-              <dd class="mt-1 text-sm text-gray-900 sm:col-span-2"><%= @supplier.company_name %></dd>
-            </div>
-            <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-              <dt class="text-sm font-medium text-gray-500">Nombre de contacto</dt>
-              <dd class="mt-1 text-sm text-gray-900 sm:col-span-2"><%= @supplier.contact_name %></dd>
-            </div>
-            <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-              <dt class="text-sm font-medium text-gray-500">Email</dt>
-              <dd class="mt-1 text-sm text-gray-900 sm:col-span-2"><%= @supplier.email %></dd>
-            </div>
-            <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-              <dt class="text-sm font-medium text-gray-500">Teléfono</dt>
-              <dd class="mt-1 text-sm text-gray-900 sm:col-span-2"><%= @supplier.phone %></dd>
-            </div>
-            <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-              <dt class="text-sm font-medium text-gray-500">Dirección</dt>
-              <dd class="mt-1 text-sm text-gray-900 sm:col-span-2"><%= @supplier.address %></dd>
-            </div>
-            <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-              <dt class="text-sm font-medium text-gray-500">CUIT</dt>
-              <dd class="mt-1 text-sm text-gray-900 sm:col-span-2"><%= @supplier.tax_id %></dd>
-            </div>
-          </dl>
-        </div>
-      </div>
-
-      <div class="mt-6 flex justify-end space-x-3">
-        <%= link_to suppliers_path, class: "btn btn-sm btn-secondary rounded" do %>
-          <i class="fas fa-arrow-left mr-2"></i> Volver
-        <% end %>
-        <%= link_to edit_supplier_path(@supplier), class: "btn btn-sm btn-primary rounded" do %>
-          <i class="fas fa-edit mr-2"></i> Editar
-        <% end %>
-      </div>
-    </div>
-  </div>
+    <%= render partial: "show", locals: { supplier: @supplier } %>
 <% end %>
