--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,16 +1,3 @@
 <%= turbo_frame_tag :product do %>
-  <div class="content">
-    <h1><%= @product.name %></h1>
-
-    <p><strong>SKU:</strong> <%= @product.sku %></p>
-    <p><strong>Descripción:</strong> <%= @product.description %></p>
-    <p><strong>Categoría:</strong> <%= @product.category %></p>
-    <p><strong>Stock:</strong> <%= @product.stock %></p>
-    <p><strong>Stock Mínimo:</strong> <%= @product.min_stock %></p>
-    <p><strong>Marca:</strong> <%= @product.brand %></p>
-    <p><strong>Estado:</strong> <%= @product.status ? 'Activo' : 'Inactivo' %></p>
-
-    <%= link_to 'Editar', edit_product_path(@product), class: 'btn btn-sm btn-warning rounded' if policy(@product).edit? %>
-    <%= link_to 'Volver', products_path, class: 'btn btn-sm btn-secondary rounded' %>
-  </div>
+  <%= render partial: "show", locals: { product: @product } %>
 <% end %>
