--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -1,55 +1,5 @@
 <%= render "shared/sidebar" %>
 <%= turbo_frame_tag :purchase do %>
-<<<<<<< HEAD
-  <div class="content">
 
-    <div class="sm:flex-auto">
-        <h1 class="text-2xl font-semibold text-gray-900">Órdenes de Compra</h1>
-        <p class="mt-2 text-sm text-gray-700">
-          Total de órdenes: <%= @purchases.count %>
-        </p>
-    </div>
-    <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none mb-3">
-        <%= link_to new_purchase_path,
-                    class: "btn btn-sm btn-primary mb-3 mr-3 rounded" do %>
-          <i class="fas fa-plus mr-2"></i>New Purchase
-        <% end %>
-        <%= link_to  purchases_path(format: :xlsx),
-                    class: "btn btn-sm btn-success mb-3 rounded" do %>
-          <i class="fa-solid fa-download"></i> Download as Excel
-        <% end %>
-      </div>
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Order Date</th>
-          <th>Delivery Date</th>
-          <th>Total Price</th>
-          <th>Supplier</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @purchases.each do |purchase| %>
-          <tr>
-            <td><%= purchase.order_date %></td>
-            <td><%= purchase.expected_delivery_date %></td>
-            <td><%= number_to_currency(purchase.total_price) %></td>
-            <td><%= purchase.supplier.company_name %></td>
-            <td class="d-flex gap-2">
-              <%= link_to purchase_path(purchase), class: "btn btn-sm btn-info rounded" do %>
-                <i class="fas fa-eye"></i>
-              <% end %>
-              <%= link_to edit_purchase_path(purchase), class: "btn btn-sm btn-warning rounded" do %>
-                <i class="fas fa-edit"></i>
-              <% end %>
-            </td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
-=======
-  <%= render partial: "index", locals: { purchases: @purchases } %>
->>>>>>> main
+<%= render partial: 'index', locals: { purchases: @purchases } %>
 <% end %>
