--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -165,7 +165,7 @@
 
           <!-- Otro KPI -->
           <div class="kpi-card">
-            <div class="kpi-title">Otro KPI</div>
+            <div class="kpi-title">Total Ventas ($)</div>
             <div class="kpi-value">25%</div>
             <div class="progress-bar">
               <div class="progress-value" style="width: 25%; background-color: #6366f1;"></div>
