--- a/app/views/purchases/_form.html.erb
+++ b/app/views/purchases/_form.html.erb
@@ -1,5 +1,17 @@
 <div class="bg-white p-6">
-  <%= simple_form_for @purchase, html: { data: { controller: 'purchases-form' } } do |f| %>
+  <%= simple_form_for @purchase, html: {
+  data: {
+    controller: 'purchases-form alert',
+    action: 'submit->alert#initSweetalert',
+    # turbo: 'false',
+    'alert-icon-value' => 'warning',
+    'alert-title-value' => '¿Estás seguro?',
+    'alert-html-value' => 'Crear nueva compra.',
+    'alert-confirm-button-text-value' => '¡Sí, Todo bien!',
+    'alert-show-cancel-button-value' => 'true',
+    'alert-cancel-button-text-value' => 'Cancelar'
+  }
+  } do |f| %>
     <!-- Campos básicos -->
     <div class="space-y-4 mb-6">
       <div>
