--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -2,7 +2,19 @@
   <div class="content">
     <h1 class="text-2xl font-bold mb-4">Nuevo Producto</h1>
 
-    <%= simple_form_for @product do |f| %>
+    <%= simple_form_for @product, html: {
+      data: {
+        controller: 'alert',
+        action: 'submit->alert#initSweetalert',
+        # turbo: 'false',
+        'alert-icon-value' => 'warning',
+        'alert-title-value' => '¿Estás seguro?',
+        'alert-html-value' => 'Crear nuevo producto.',
+        'alert-confirm-button-text-value' => '¡Sí, Todo bien!',
+        'alert-show-cancel-button-value' => 'true',
+        'alert-cancel-button-text-value' => 'Cancelar'
+      }
+      } do |f| %>
       <%# Mostrar errores si existen %>
       <% if @product.errors.any? %>
         <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded mb-4">
