--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/sidebar" %>
 <%= turbo_frame_tag :product do %>
   <%= render partial: "show", locals: { product: @product } %>
 <% end %>
