--- a/app/views/purchases/destroy.turbo_stream.erb
+++ b/app/views/purchases/destroy.turbo_stream.erb
@@ -1,2 +1,2 @@
 <%= turbo_stream.prepend "flash", partial: "shared/flash" %>
-<%= turbo_stream.replace "purchase", partial: "purchases/index", locals: { purchases: @purchases } %>
+<%= turbo_stream.remove @purchase %>
